--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
   <title>Restuarant Details</title>
 </head>
 <body>
-  <div id="root"></div>
+  <div id="sidebar"></div>
   <script src="bundle.js"></script>
 </body>
 </html>
